--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ live_view_studio-*.tar
 /priv/static/assets/
 
 # Ignore uploaded image files.
-/priv/static/uploads/
+/priv/static/uploads/*
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
